--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Challenge SOTAMIT</title>
   </head>
-  <body class="relative h-screen w-screen font-Inter">
-    <div id="root"></div>
+  <body class="relative mx-4 bg-[#030712] text-gray-400 font-Inter">
+    <div id="root" class="w-full h-full flex justify-center items-start"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
